--- a/index.html
+++ b/index.html
@@ -71,10 +71,16 @@
                 <table class="w-full text-left border-collapse min-w-[1400px]">
                     <thead class="bg-effico-green text-white text-[10px] uppercase tracking-wider">
                         <tr>
-                            <th class="px-4 py-4">Data</th><th class="px-4 py-4">Cotação</th><th class="px-4 py-4">ID Origem</th>
-                            <th class="px-4 py-4">Reduzido CC</th><th class="px-4 py-4">Centro de Custo</th>
-                            <th class="px-4 py-4">Cód. Prod</th><th class="px-4 py-4">Produto</th><th class="px-4 py-4">Qtd</th>
-                            <th class="px-4 py-4">Unitário</th><th class="px-4 py-4">Total</th><th class="px-4 py-4">Fornecedor</th><th class="px-4 py-4">Comprador</th>
+                            <th class="px-4 py-4">Data</th>
+                            <th class="px-4 py-4">Reduzido</th>
+                            <th class="px-4 py-4">Descrição Centro de Custo</th>
+                            <th class="px-4 py-4">Cód. Prod</th>
+                            <th class="px-4 py-4">Quantidade</th>
+                            <th class="px-4 py-4">Unidade</th>
+                            <th class="px-4 py-4">Unitario</th>
+                            <th class="px-4 py-4">Total</th>
+                            <th class="px-4 py-4">Fornecedor</th>
+                            <th class="px-4 py-4">Comprador</th>
                         </tr>
                     </thead>
                     <tbody id="corpoTabela" class="text-xs text-slate-600"></tbody>
