--- a/index.html
+++ b/index.html
@@ -72,13 +72,15 @@
                     <thead class="bg-effico-green text-white text-[10px] uppercase tracking-wider">
                         <tr>
                             <th class="px-4 py-4">Data</th>
+                            <th class="px-4 py-4">Id da cotação</th>
                             <th class="px-4 py-4">Reduzido</th>
-                            <th class="px-4 py-4">Descrição Centro de Custo</th>
-                            <th class="px-4 py-4">Cód. Prod</th>
+                            <th class="px-4 py-4">Descrição centro de custo</th>
+                            <th class="px-4 py-4">Id item</th>
+                            <th class="px-4 py-4">Descrição do item</th>
                             <th class="px-4 py-4">Quantidade</th>
                             <th class="px-4 py-4">Unidade</th>
-                            <th class="px-4 py-4">Unitario</th>
-                            <th class="px-4 py-4">Total</th>
+                            <th class="px-4 py-4">Valor unitario</th>
+                            <th class="px-4 py-4">Valor total</th>
                             <th class="px-4 py-4">Fornecedor</th>
                             <th class="px-4 py-4">Comprador</th>
                         </tr>
