--- a/index.html
+++ b/index.html
@@ -1,94 +1,82 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Effico | Gestão de Suprimentos</title>
+    <title>CORE</title>
+
+    <!-- Tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <style>
-        :root { --effico-dark: #1e3a5a; --effico-green: #4a7c59; }
-        .bg-effico-dark { background-color: var(--effico-dark); }
-        .bg-effico-green { background-color: var(--effico-green); }
-        .label-form { display: block; font-size: 10px; font-weight: 700; color: #94a3b8; text-transform: uppercase; margin-bottom: 0.25rem; }
-        .input-form { width: 100%; border-bottom: 2px solid #e2e8f0; padding: 0.5rem; font-size: 0.875rem; outline: none; background: transparent; transition: border-color 0.2s; }
-        .input-form:focus { border-color: var(--effico-green); }
-        .loader { border: 3px solid #f3f3f3; border-top: 3px solid var(--effico-green); border-radius: 50%; width: 20px; height: 20px; animation: spin 1s linear infinite; display: inline-block; vertical-align: middle; }
-        @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
-    </style>
+
+    <!-- FontAwesome -->
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+
 </head>
-<body class="bg-slate-100 flex h-screen font-sans overflow-hidden">
+<body class="bg-slate-100 flex h-screen">
 
-    <aside class="w-64 bg-effico-dark text-white flex flex-col shadow-xl">
-        <div class="p-6 flex items-center gap-3 border-b border-white/10">
-            <div class="w-10 h-10 bg-green-500 rounded-full flex items-center justify-center shadow-lg"><i class="fas fa-droplet text-white text-xl"></i></div>
-            <div>
-                <h1 class="font-bold text-xl leading-none tracking-tight">EFFICO</h1>
-                <p class="text-[10px] uppercase tracking-widest text-green-400 font-semibold">Saneamento</p>
-            </div>
-        </div>
-        <nav class="mt-6 flex-1 px-4 space-y-2">
-            <button onclick="mudarAba('banco')" id="btn-banco" class="w-full flex items-center gap-3 px-4 py-3 rounded-lg bg-white/10 transition text-left"><i class="fas fa-search-dollar w-5"></i> Banco de Preços</button>
-            <button onclick="mudarAba('licitacao')" id="btn-licitacao" class="w-full flex items-center gap-3 px-4 py-3 rounded-lg hover:bg-white/5 transition text-left"><i class="fas fa-file-contract w-5"></i> Licitações</button>
-        </nav>
-    </aside>
+<!-- SIDEBAR -->
+<aside class="w-64 bg-slate-900 text-white flex flex-col">
+    <h1 class="text-xl font-bold p-4 border-b border-white/10">
+       CORE
+    </h1>
 
-    <main class="flex-1 flex flex-col bg-white overflow-hidden">
-        <header class="h-16 border-b flex items-center px-8 justify-between bg-white shadow-sm z-10">
-            <div class="flex items-center gap-2 text-sm font-medium text-slate-600">
-                <i class="fas fa-database text-slate-400"></i>
-                <span id="statusConexao">Sincronizado</span>
-            </div>
-            <div class="flex items-center gap-3">
-                <span class="text-sm font-bold text-effico-dark">Portal de Suprimentos</span>
-                <div class="w-8 h-8 bg-slate-200 rounded-full flex items-center justify-center"><i class="fas fa-user text-slate-500"></i></div>
-            </div>
-        </header>
+    <nav class="mt-4 flex-1 px-3 space-y-2">
 
-        <section class="p-8 overflow-y-auto flex-1">
-            <div class="flex justify-between items-end mb-8">
-                <div>
-                    <h2 id="tituloPagina" class="text-3xl font-extrabold text-effico-dark tracking-tight uppercase">BANCO DE PREÇOS</h2>
-                    <p class="text-slate-500 italic">Limpeza de caracteres especiais ativa (v4.2)</p>
-                </div>
-                <div class="flex gap-3">
-                    <input type="file" id="inputPlanilha" accept=".csv,.txt" class="hidden" onchange="importarDados(this)">
-                    <button onclick="document.getElementById('inputPlanilha').click()" class="bg-slate-100 hover:bg-slate-200 text-slate-700 px-6 py-3 rounded-xl font-bold flex items-center gap-3 transition border border-slate-300">
-                        <i class="fas fa-broom text-blue-500"></i> IMPORTAR E LIMPAR
-                    </button>
-                    <button onclick="abrirModalCadastro()" class="bg-effico-dark hover:bg-slate-800 text-white px-6 py-3 rounded-xl font-bold flex items-center gap-3 transition transform hover:scale-105 shadow-lg">
-                        <i class="fas fa-plus-circle text-green-400"></i> NOVO
-                    </button>
-                </div>
-            </div>
+        <button onclick="mudarAba('banco')" id="btn-banco"
+            class="btn-aba bg-white/10">
+            <i class="fas fa-search-dollar w-5"></i>
+            Banco de Preços
+        </button>
 
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-8 bg-slate-50 p-6 rounded-2xl border border-slate-200">
-                <div class="md:col-span-2"><input type="text" id="inputBusca" placeholder="Pesquisar..." class="w-full border rounded-xl px-4 py-2 outline-none focus:ring-2 focus:ring-green-500"></div>
-                <div class="text-right"><label class="text-[10px] font-bold text-slate-400 uppercase">Registros</label><div id="contadorRegistros" class="text-2xl font-black">0</div></div>
-            </div>
+        <button onclick="mudarAba('solicitacao')" id="btn-solicitacao"
+            class="btn-aba">
+            <i class="fas fa-cart-plus w-5"></i>
+            Solicitação de Compras
+        </button>
 
-            <div class="bg-white rounded-2xl shadow-sm border border-slate-200 overflow-x-auto">
-                <table class="w-full text-left border-collapse min-w-[1400px]">
-                    <thead class="bg-effico-green text-white text-[10px] uppercase tracking-wider">
-                        <tr>
-                            <th class="px-4 py-4">Data</th>
-                            <th class="px-4 py-4">Id da cotação</th>
-                            <th class="px-4 py-4">Reduzido</th>
-                            <th class="px-4 py-4">Descrição centro de custo</th>
-                            <th class="px-4 py-4">Id item</th>
-                            <th class="px-4 py-4">Descrição do item</th>
-                            <th class="px-4 py-4">Quantidade</th>
-                            <th class="px-4 py-4">Unidade</th>
-                            <th class="px-4 py-4">Valor unitario</th>
-                            <th class="px-4 py-4">Valor total</th>
-                            <th class="px-4 py-4">Fornecedor</th>
-                            <th class="px-4 py-4">Comprador</th>
-                        </tr>
-                    </thead>
-                    <tbody id="corpoTabela" class="text-xs text-slate-600"></tbody>
-                </table>
-            </div>
-        </section>
-    </main>
+        <button onclick="mudarAba('avaliacao')" id="btn-avaliacao"
+            class="btn-aba">
+            <i class="fas fa-star-half-alt w-5"></i>
+            Avaliação do Fornecedor
+        </button>
 
-<script src="script.js" defer> </script>
+    </nav>
+</aside>
+
+<!-- CONTEÚDO -->
+<main class="flex-1 p-6 overflow-auto">
+
+    <h2 id="tituloPagina" class="text-2xl font-bold mb-4">
+        BANCO DE PREÇOS
+    </h2>
+
+    <!-- TABELA -->
+    <div class="bg-white rounded-lg shadow overflow-x-auto">
+        <table class="w-full text-sm">
+            <thead id="cabecalhoTabela" class="bg-slate-200"></thead>
+            <tbody id="corpoTabela"></tbody>
+        </table>
+    </div>
+
+</main>
+
+<script src="script.js"></script>
+
+<style>
+    .btn-aba {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        gap: 12px;
+        padding: 12px;
+        border-radius: 8px;
+        text-align: left;
+        transition: 0.2s;
+    }
+    .btn-aba:hover {
+        background: rgba(255,255,255,0.1);
+    }
+</style>
+
+</body>
+</html>
