--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <div class= "p-4 border-b border-white/10 flex items-center gap-3">
-        <img src="logo.png" alt="logo" class="w-10 h-10 object-contain">
-        <span class="text-kg font-bold"> CORE</span>"
-    </div>
+
+    <title>CORE | Compras</title>
 
     <!-- Tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -13,15 +11,18 @@
     <!-- FontAwesome -->
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
-
 </head>
+
 <body class="bg-slate-100 flex h-screen">
 
 <!-- SIDEBAR -->
 <aside class="w-64 bg-slate-900 text-white flex flex-col">
-    <h1 class="text-xl font-bold p-4 border-b border-white/10">
-       CORE
-    </h1>
+
+    <!-- LOGO -->
+    <div class="p-4 border-b border-white/10 flex items-center gap-3">
+        <img src="logo.png" alt="Logo CORE" class="w-10 h-10 object-contain">
+        <span class="text-lg font-bold tracking-wide">CORE</span>
+    </div>
 
     <nav class="mt-4 flex-1 px-3 space-y-2">
 
@@ -53,7 +54,6 @@
         BANCO DE PREÇOS
     </h2>
 
-    <!-- TABELA -->
     <div class="bg-white rounded-lg shadow overflow-x-auto">
         <table class="w-full text-sm">
             <thead id="cabecalhoTabela" class="bg-slate-200"></thead>
